--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>Movies</h1>
+<h2>In Theaters</h2>
+<app-movies-list [movies]="moviesInTheaters"></app-movies-list>
 
-<app-movies-list></app-movies-list>
+<h2>Future Releases</h2>
+<app-movies-list [movies]="moviesFutureReleases"></app-movies-list>
