--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -2,8 +2,14 @@
     *ngIf="!movies"
     src="https://i.stack.imgur.com/kOnzy.gif"
 />
+
+<p *ngIf="movies?.length === 0">There are no records to display</p>
+
 <div *ngFor="let movie of movies; let index = index" class="movie-container">
-    <div>{{index}}) {{movie.title | uppercase}}</div>
+    <div>
+        {{index}}) {{movie.title | uppercase}}
+        <button style="margin-left: 1rem;" (click)="remove(index)">Remove</button>
+    </div>
     <div>{{movie.releaseDate | date: "dd-MMMM-yyyy"}}</div>
     <div>{{movie.price | currency}}</div>
 </div>
