--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <app-menu></app-menu>
 
-<div class="container">
+<app-rating (onRating)="handleRating($event)"></app-rating>
 
-<h2>In Theaters</h2>
+<!-- <div class="container">
+    <h2>In Theaters</h2>
+    
+    <app-movies-list [movies]="moviesInTheaters"></app-movies-list>
 
-<app-movies-list [movies]="moviesInTheaters"></app-movies-list>
+    <h2>Future Releases</h2>
 
-<h2>Future Releases</h2>
-
-<app-movies-list [movies]="moviesFutureReleases"></app-movies-list>
-</div>
+    <app-movies-list [movies]="moviesFutureReleases"></app-movies-list>
+</div> -->
