--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <app-rating (onRating)="handleRating($event)"></app-rating>
 
-<!-- <div class="container">
+<div class="container">
     <h2>In Theaters</h2>
     
     <app-movies-list [movies]="moviesInTheaters"></app-movies-list>
@@ -10,4 +10,4 @@
     <h2>Future Releases</h2>
 
     <app-movies-list [movies]="moviesFutureReleases"></app-movies-list>
-</div> -->
+</div>
