--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -6,7 +6,7 @@
             class="movie-container"
         >
             <div>
-                {{ index }}) {{ movie.title | uppercase }}
+                <h2>{{ index }}) {{ movie.title | uppercase }}</h2>
                 <button style="margin-left: 1rem;" (click)="remove(index)">Remove</button>
             </div>
             <div>{{ movie.releaseDate | date: "dd-MMMM-yyyy" }}</div>
