--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,16 +1,22 @@
 <app-generic-list [list]="movies">
-
     <ng-container content>
-        <div
-            *ngFor="let movie of movies; let index = index"
-            class="movie-container"
-        >
-            <div>
-                <h2>{{ index }}) {{ movie.title | uppercase }}</h2>
-                <button style="margin-left: 1rem;" (click)="remove(index)">Remove</button>
+        <div class="movies-container">
+            <div *ngFor="let movie of movies; let index = index" class="movie-container">
+                <a>
+                    <img [src]="movie.poster" alt="Poster" />
+                </a>
+                <p>
+                    <a>{{movie.title}}</a>
+                </p>
+                <div>
+                    <a mat-flat-button color="primary">
+                        Edit
+                    </a>
+                    <button mat-flat-button color="warn" type="button">
+                        Delete
+                    </button>
+                </div>
             </div>
-            <div>{{ movie.releaseDate | date: "dd-MMMM-yyyy" }}</div>
-            <div>{{ movie.price | currency }}</div>
         </div>
     </ng-container>
 </app-generic-list>
