--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 <app-rating (onRating)="handleRating($event)"></app-rating>
 
 <div class="container">
+    <router-outlet></router-outlet>
+
     <h2>In Theaters</h2>
     
     <app-movies-list [movies]="moviesInTheaters"></app-movies-list>
