--- a/src/app/genres/index-genres/index-genres.component.html
+++ b/src/app/genres/index-genres/index-genres.component.html
@@ -1,3 +1,3 @@
 <h2>Genres</h2>
 
-<button mat-flat-button color="primary">Create New</button> <!-- routerLink="/genres/create" -->
+<button mat-flat-button color="primary" routerLink="/genres/create">Create New</button> <!-- routerLink="/genres/create" -->
