Simple style Home

--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -16,6 +16,7 @@
                         Delete
                     </button>
                 </div>
+                <app-rating (onRating)="handleRating($event)"></app-rating>
             </div>
         </div>
     </ng-container>
