--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,6 @@
             AngularMovies
         </a>
     </span>
-
     <div>
         <a mat-button routerLink="genres"> Genres </a>
     </div>
@@ -17,6 +16,11 @@
     </div>
     <div>
         <a mat-button routerLink="movies/create"> Create Movie </a>
+    </div>
+    <div>
+        <a mat-button routerLink="movies/filter"> 
+            Search movies <mat-icon>search</mat-icon>
+        </a>
     </div>
 
 </mat-toolbar>
