--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form">
+<form (submit)="saveChanges()" [formGroup]="form">
     <mat-form-field appearance="outline">
         <mat-label>Name*</mat-label>
         <input formControlName="name" matInput />
@@ -10,4 +10,8 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+    <div>
+        <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
+        <a mat-stroked-button routerLink="/actor">Cancel</a>
+    </div>
 </form>
