Success markdown preview

--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -10,6 +10,10 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+
+    <h4>Actor Bio</h4>
+    <app-input-markdown></app-input-markdown>    
+
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
         <a mat-stroked-button routerLink="/actor">Cancel</a>
