--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -10,9 +10,9 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-
+<!-- 
     <h4>Actor Bio</h4>
-    <app-input-markdown></app-input-markdown>    
+    <app-input-markdown (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>     -->
 
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
