--- a/src/app/movies/form-movie/form-movie.component.html
+++ b/src/app/movies/form-movie/form-movie.component.html
@@ -2,10 +2,10 @@
     <mat-form-field appearance="outline">
         <mat-label>Title*</mat-label>
         <input formControlName="title" matInput />
-        <mat-error> Required</mat-error>
+        <mat-error>The tile field is required.</mat-error>
       </mat-form-field>
 
-      <div>
+    <div class="checkbox-container">
         <mat-checkbox formControlName="inTheaters">In Theaters</mat-checkbox>
     </div>
 
@@ -20,5 +20,16 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+<!-- 
+    <h4>Select the Poster</h4>
+    <app-input-img [urlCurrentImage]="model?.poster" (onImageSelected)="onImageSelected($event)">
+    </app-input-img> -->
 
+    <h4>Summary</h4>
+    <app-input-markdown [markdownContent]="model?.summary" (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>
+
+    <div>
+        <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
+        <a mat-stroked-button routerLink="/">Cancel</a>
+    </div>
 </form>
