--- a/src/app/movies/form-movie/form-movie.component.html
+++ b/src/app/movies/form-movie/form-movie.component.html
@@ -28,6 +28,10 @@
     <h4>Summary</h4>
     <app-input-markdown [markdownContent]="model?.summary" (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>
 
+    <h4>Select the Genres</h4>
+
+    <app-multiple-selector></app-multiple-selector>
+
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
         <a mat-stroked-button routerLink="/">Cancel</a>
