--- a/src/app/movies/form-movie/form-movie.component.html
+++ b/src/app/movies/form-movie/form-movie.component.html
@@ -30,7 +30,9 @@
 
     <h4>Select the Genres</h4>
 
-    <app-multiple-selector></app-multiple-selector>
+    <app-multiple-selector
+        [NonSelectedItems]="nonSelectedGenres"
+        [SelectedItems]="selectedGenres"></app-multiple-selector>
 
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
