Input image for actor.

--- a/src/app/utilities/input-img/input-img.component.html
+++ b/src/app/utilities/input-img/input-img.component.html
@@ -6,7 +6,7 @@
         <div *ngIf="imageBase64">
             <img [src]="imageBase64" alt="image" />
         </div>
-        <div>
+        <div *ngIf="urlCurrentImage">
             <img [src]="urlCurrentImage" alt="image">
         </div>
     </div>
