--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -10,6 +10,8 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+
+    <app-input-img (onImageSelected)="onImageSelected($event)"></app-input-img>
 <!-- 
     <h4>Actor Bio</h4>
     <app-input-markdown (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>     -->
