--- a/src/app/movies/form-movie/form-movie.component.html
+++ b/src/app/movies/form-movie/form-movie.component.html
@@ -34,6 +34,9 @@
         [NonSelectedItems]="nonSelectedGenres"
         [SelectedItems]="selectedGenres"></app-multiple-selector>
 
+    <h4>Select the Actors</h4>
+    <app-actors-autocomplete></app-actors-autocomplete>
+
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
         <a mat-stroked-button routerLink="/">Cancel</a>
