Widget selected actor refine (remove)

--- a/src/app/actors/actors-autocomplete/actors-autocomplete.component.css
+++ b/src/app/actors/actors-autocomplete/actors-autocomplete.component.css
@@ -7,3 +7,13 @@ img{
     width: 35px;
     height: 45px;
 }
+table{
+    width: 100%;
+    margin-bottom: 1rem;
+}
+mat-form-field{
+    width: 100%;
+}
+mat-icon{
+    cursor: pointer;
+}
