--- a/src/app/actors/actors-autocomplete/actors-autocomplete.component.html
+++ b/src/app/actors/actors-autocomplete/actors-autocomplete.component.html
@@ -15,7 +15,10 @@
 <table
     mat-table
     *ngIf="selectedActors.length > 0"
-    [dataSource]="selectedActors">
+    [dataSource]="selectedActors"
+    cdkDropList
+    [cdkDropListData]="selectedActors"
+    (cdkDropListDropped)="dropped($event)">
 
     <ng-container matColumnDef="picture">
         <td mat-cell *matCellDef="let element">
@@ -44,6 +47,9 @@
         </td>
     </ng-container>
 
-    <tr mat-row *matRowDef="let row; columns: columnsToDisplay"></tr>
-
+    <tr
+        mat-row
+        *matRowDef="let row; columns: columnsToDisplay"
+        cdkDrag
+        [cdkDragData]="row"></tr>
 </table>
