--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 h2 {
     color: gray;
 }
+.table-index{
+    width: 100%;
+    margin-top: 1rem;
+}
+.table-index a{
+    margin-right: 1rem;
+}
