Material spinner for generic list

--- a/src/app/utilities/generic-list/generic-list.component.html
+++ b/src/app/utilities/generic-list/generic-list.component.html
@@ -3,7 +3,7 @@
         <ng-content select="[loading]"></ng-content>
     </span>
     <span *ngIf="!loading.innerHTML.trim()">
-        <img style="width: 5rem;" src="https://i.stack.imgur.com/kOnzy.gif" />
+        <mat-spinner></mat-spinner>
     </span>
 </div>
 
