--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -12,9 +12,9 @@
     </mat-form-field>
 
     <app-input-img (onImageSelected)="onImageSelected($event)"></app-input-img>
-<!-- 
+
     <h4>Actor Bio</h4>
-    <app-input-markdown (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>     -->
+    <app-input-markdown (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>    
 
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
