--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -11,9 +11,9 @@
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <!-- <app-input-img
+    <app-input-img
     [urlCurrentImage]="model?.picture"
-    (onImageSelected)="onImageSelected($event)"></app-input-img> -->
+    (onImageSelected)="onImageSelected($event)"></app-input-img>
 
     <h4>Actor Bio</h4>
     <app-input-markdown
